testsuite/tests/properties/invalid_dynvar/bind_twice.lkt
import common

class Example: BaseNode implements TokenNode {
    fun get_int_impl(): Int = {
        bind my_var = 12;
        bind my_var = 13;
        my_var
    }
}
